fix: z-index for new button

--- a/src/scss/pages/homepage.scss
+++ b/src/scss/pages/homepage.scss
@@ -146,6 +146,7 @@ body {
   display: block;
   margin-bottom: 24px;
   padding: 8px 24px;
+  z-index: 100;
 
   @include h5;
   text-align: center;
